--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0"
   }
